--- a/src/main/resources/static/dsNord.html
+++ b/src/main/resources/static/dsNord.html
@@ -768,7 +768,6 @@
             }
         }
     </style>
-</head>
 <body>
 <div class="sidebar" id="sidebar">
     <button class="sidebar-toggle" id="sidebarToggle">
@@ -865,7 +864,8 @@
         <div class="section-header">
             <h2 id="form-section-title">Ajouter une entrée</h2>
         </div>
-        <form id="formNord"> <input type="hidden" id="id">
+        <form id="formNord">
+            <input type="hidden" id="id">
             <div class="form-group">
                 <label for="date">Date:</label>
                 <input type="date" id="date" required>
@@ -879,11 +879,8 @@
                 <input type="time" id="hSortie" required>
             </div>
             <div class="form-group">
-                <label for="transporteur">Transporteur:</label>
-                <select id="transporteur" required>
-                    <option value="">Sélectionner un transporteur</option>
-                    <option value="OUMJIRAN">OUMJIRAN</option>
-                    <option value="BOUDRHAM">BOUDRHAM</option>
+                <label for="transporteur-select">Transporteur:</label>
+                <select id="transporteur-select" required>
                 </select>
             </div>
             <div class="form-group">
@@ -903,12 +900,14 @@
                 <input type="number" id="tare" step="0.01" placeholder="Poids TARE" required>
             </div>
             <div class="form-group">
-                <label for="poste">Poste:</label>
-                <input type="text" id="poste" placeholder="Poste" required>
+                <label for="poste-select">Poste:</label>
+                <select id="poste-select" required>
+                </select>
             </div>
             <div class="form-group">
-                <label for="lieuDeDecharge">Lieu De Décharge:</label>
-                <input type="text" id="lieuDeDecharge" placeholder="Lieu de décharge" required>
+                <label for="lieu-dechargement-select">Lieu De Décharge:</label>
+                <select id="lieu-dechargement-select" required>
+                </select>
             </div>
             <div class="form-group">
                 <label for="observation">Observation:</label>
@@ -946,7 +945,6 @@
                 <option value="12">12 — Décembre</option>
             </select>
         </div>
-
     </div>
 
     <div class="table-section">
@@ -954,23 +952,24 @@
             <h2>Historique DS Nord</h2>
         </div>
         <div class="table-responsive">
-            <table id="tableNord"> <thead>
-            <tr>
-                <th>Date</th>
-                <th>H Entrée</th>
-                <th>H Sortie</th>
-                <th>Transporteur</th>
-                <th>N° BL</th>
-                <th>Immatricule</th>
-                <th>TB</th>
-                <th>TARE</th>
-                <th>NET</th>
-                <th>Poste</th>
-                <th>Lieu De Décharge</th>
-                <th>Observation</th>
-                <th>Actions</th>
-            </tr>
-            </thead>
+            <table id="tableNord">
+                <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>H Entrée</th>
+                    <th>H Sortie</th>
+                    <th>Transporteur</th>
+                    <th>N° BL</th>
+                    <th>Immatricule</th>
+                    <th>TB</th>
+                    <th>TARE</th>
+                    <th>NET</th>
+                    <th>Poste</th>
+                    <th>Lieu De Décharge</th>
+                    <th>Observation</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
                 <tbody>
                 </tbody>
             </table>
@@ -982,6 +981,63 @@
         <button id="nextPage">Suivant &raquo;</button>
     </div>
 </div>
+
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const REF_API_URL = "http://localhost:8080/api/refs";
+
+        // Mapping of field IDs to the keys returned by the backend
+        const refMapping = {
+            "transporteur-select": "transporteurs",
+            "poste-select": "postes",
+            "lieu-dechargement-select": "lieuxDeDechargement" // Assuming this ref is needed for DS Nord
+        };
+
+        // Fills a single select field with provided values
+        function fillSelect(selectId, values) {
+            const select = document.getElementById(selectId);
+            if (!select) {
+                console.warn(`⚠️ Select element with ID '${selectId}' not found.`);
+                return;
+            }
+            select.innerHTML = ""; // Clear existing options
+
+            // Add a default "Select an option" if desired
+            const defaultOption = document.createElement("option");
+            defaultOption.value = "";
+            defaultOption.textContent = `Sélectionner un ${selectId.split('-')[0]}`; // e.g., "Sélectionner un transporteur"
+            select.appendChild(defaultOption);
+
+            values.forEach(value => {
+                const option = document.createElement("option");
+                option.value = value;
+                option.textContent = value;
+                select.appendChild(option);
+            });
+        }
+
+        // Fetches refs from backend and populates select fields
+        fetch(REF_API_URL)
+            .then(res => {
+                if (!res.ok) {
+                    throw new Error(`HTTP error! status: ${res.status}`);
+                }
+                return res.json();
+            })
+            .then(data => {
+                Object.entries(refMapping).forEach(([selectId, key]) => {
+                    if (data[key] && Array.isArray(data[key])) {
+                        fillSelect(selectId, data[key]);
+                    } else {
+                        console.warn(`⚠️ API response for key '${key}' is missing or not an array. Data:`, data);
+                    }
+                });
+            })
+            .catch(error => {
+                console.error("⚠️ Failed to load shared fields:", error);
+            });
+    });
+</script>
 
 <script>
     const API_BASE_URL = 'http://localhost:8080/api/dsnord'; // Ensure this matches your DS Nord backend endpoint
@@ -996,13 +1052,15 @@
     const dateInput = document.getElementById('date');
     const hEntreeInput = document.getElementById('hEntree');
     const hSortieInput = document.getElementById('hSortie');
-    const transporteurInput = document.getElementById('transporteur');
+    // Updated to reference the actual select elements
+    const transporteurSelect = document.getElementById('transporteur-select');
     const numeroBLInput = document.getElementById('numeroBL');
     const immatriculeInput = document.getElementById('immatricule');
     const tbInput = document.getElementById('tb');
     const tareInput = document.getElementById('tare');
-    const posteInput = document.getElementById('poste');
-    const lieuDeDechargeInput = document.getElementById('lieuDeDecharge');
+    // Updated to reference the actual select elements
+    const posteSelect = document.getElementById('poste-select');
+    const lieuDeDechargeSelect = document.getElementById('lieu-dechargement-select');
     const observationInput = document.getElementById('observation');
     const submitButton = document.getElementById('submit-button');
     const formSectionTitle = document.getElementById('form-section-title');
@@ -1016,8 +1074,8 @@
 
     function showMessage(msg, type) {
         messageDiv.innerHTML = `<div class="alert ${type}">
-            <i class="fas ${type==='success'?'fa-check-circle':'fa-exclamation-circle'}"></i> ${msg}
-        </div>`;
+                <i class="fas ${type==='success'?'fa-check-circle':'fa-exclamation-circle'}"></i> ${msg}
+            </div>`;
         messageDiv.style.display = 'block';
         setTimeout(()=>{
             messageDiv.style.display = 'none';
@@ -1031,9 +1089,17 @@
         submitButton.innerHTML = '<i class="fas fa-plus"></i> Ajouter';
         formSectionTitle.textContent = 'Ajouter une entrée';
         cancelEditButton.style.display = 'none';
-        // Set default date again after clearing
-        const today = new Date(), y=today.getFullYear(), m=('0'+(today.getMonth()+1)).slice(-2), d=('0'+today.getDate()).slice(-2);
+        // Set default date to today
+        const today = new Date();
+        const y = today.getFullYear();
+        const m = ('0' + (today.getMonth() + 1)).slice(-2);
+        const d = ('0' + today.getDate()).slice(-2);
         dateInput.value = `${y}-${m}-${d}`;
+
+        // Ensure select elements reset to default/first option
+        if (transporteurSelect) transporteurSelect.value = "";
+        if (posteSelect) posteSelect.value = "";
+        if (lieuDeDechargeSelect) lieuDeDechargeSelect.value = "";
     }
 
     async function loadDsNordData() {
@@ -1048,8 +1114,8 @@
             console.error(err);
             showMessage('Échec du chargement des données. Veuillez vérifier la connexion au serveur.', 'error');
             tableBody.innerHTML = `<tr><td colspan="13" style="text-align:center;color:red;padding:20px;">
-                Échec du chargement des données.
-            </td></tr>`;
+                    Échec du chargement des données.
+                </td></tr>`;
         }
     }
 
@@ -1072,8 +1138,8 @@
         tableBody.innerHTML = '';
         if (filteredData.length === 0) {
             tableBody.innerHTML = `<tr><td colspan="13" style="text-align:center;padding:20px;">
-                Aucune donnée disponible pour le mois sélectionné.
-            </td></tr>`;
+                    Aucune donnée disponible pour le mois sélectionné.
+                </td></tr>`;
         } else {
             const totalPages = Math.ceil(filteredData.length / rowsPerPage);
             if (currentPage > totalPages && totalPages > 0) currentPage = totalPages;
@@ -1089,26 +1155,26 @@
 
                 const row = tableBody.insertRow();
                 row.innerHTML = `
-                    <td>${item.date}</td>
-                    <td>${item.hEntree}</td>
-                    <td>${item.hSortie}</td>
-                    <td>${item.transporteur}</td>
-                    <td>${item.numeroBL}</td>
-                    <td>${item.immatricule}</td>
-                    <td>${tbValue.toFixed(2)}</td>
-                    <td>${tareValue.toFixed(2)}</td>
-                    <td>${net}</td>
-                    <td>${item.poste}</td>
-                    <td>${item.lieuDeDecharge}</td>
-                    <td>${item.observation || ''}</td>
-                    <td class="table-actions">
-                        <button onclick="editDsNordData('${item.id}')">
-                          <i class="fas fa-edit"></i>
-                        </button>
-                        <button class="delete-btn" onclick="deleteDsNordData('${item.id}')">
-                          <i class="fas fa-trash-alt"></i>
-                        </button>
-                    </td>`;
+                        <td>${item.date}</td>
+                        <td>${item.hEntree}</td>
+                        <td>${item.hSortie}</td>
+                        <td>${item.transporteur}</td>
+                        <td>${item.numeroBL}</td>
+                        <td>${item.immatricule}</td>
+                        <td>${tbValue.toFixed(2)}</td>
+                        <td>${tareValue.toFixed(2)}</td>
+                        <td>${net}</td>
+                        <td>${item.poste}</td>
+                        <td>${item.lieuDeDecharge}</td>
+                        <td>${item.observation || ''}</td>
+                        <td class="table-actions">
+                            <button onclick="editDsNordData('${item.id}')">
+                            <i class="fas fa-edit"></i>
+                            </button>
+                            <button class="delete-btn" onclick="deleteDsNordData('${item.id}')">
+                            <i class="fas fa-trash-alt"></i>
+                            </button>
+                        </td>`;
             });
 
             // Update pagination info and button states
@@ -1125,13 +1191,13 @@
             date: dateInput.value,
             hEntree: hEntreeInput.value,
             hSortie: hSortieInput.value,
-            transporteur: transporteurInput.value,
+            transporteur: transporteurSelect.value, // Use .value from select
             numeroBL: numeroBLInput.value,
             immatricule: immatriculeInput.value,
             tb: parseFloat(tbInput.value),
             tare: parseFloat(tareInput.value),
-            poste: posteInput.value,
-            lieuDeDecharge: lieuDeDechargeInput.value,
+            poste: posteSelect.value, // Use .value from select
+            lieuDeDecharge: lieuDeDechargeSelect.value, // Use .value from select
             observation: observationInput.value
         };
 
@@ -1159,13 +1225,13 @@
             dateInput.value = item.date;
             hEntreeInput.value = item.hEntree;
             hSortieInput.value = item.hSortie;
-            transporteurInput.value = item.transporteur;
+            transporteurSelect.value = item.transporteur; // Set value for select
             numeroBLInput.value = item.numeroBL;
             immatriculeInput.value = item.immatricule;
             tbInput.value = item.tb;
             tareInput.value = item.tare;
-            posteInput.value = item.poste;
-            lieuDeDechargeInput.value = item.lieuDeDecharge;
+            posteSelect.value = item.poste; // Set value for select
+            lieuDeDechargeSelect.value = item.lieuDeDecharge; // Set value for select
             observationInput.value = item.observation;
 
             submitButton.innerHTML = '<i class="fas fa-save"></i> Mettre à jour';
@@ -1203,8 +1269,8 @@
             sidebar.classList.toggle('collapsed');
         });
 
-        // Set default date to today
-        clearForm(); // Also sets default date
+        // Set default date to today and clear form
+        clearForm();
 
         // Form submission and cancel edit
         formNord.addEventListener('submit', saveDsNordData);
