--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -823,6 +823,7 @@
             <i class="fas fa-home"></i>
             <a href="index.html"><span>Dashboard</span></a>
         </li>
+
         <li class="nav-item">
             <i class="fas fa-weight"></i>
             <a href="controle-bascule-hjds.html"><span>C. Bascule HJ & DS</span></a>
@@ -893,7 +894,7 @@
 
         <li class="nav-item">
             <i class="fas fa-cog"></i>
-            <a href="#"><span>Settings</span></a>
+            <a href="admin.html"><span>Settings</span></a>
         </li>
         <li class="nav-item">
             <i class="fas fa-question-circle"></i>
