--- a/src/main/resources/static/dsClassique.html
+++ b/src/main/resources/static/dsClassique.html
@@ -766,7 +766,8 @@
             }
         }
     </style>
-</head>
+
+
 <body>
 <div class="sidebar" id="sidebar">
     <button class="sidebar-toggle" id="sidebarToggle">
@@ -857,64 +858,62 @@
 <div class="main-content">
     <h1 class="page-title">DS Classique</h1>
 
-    <div id="message"></div> <div class="form-section">
-    <div class="section-header">
-        <h2 id="form-section-title">Ajouter une entrée</h2>
-    </div>
-    <form id="formDsClassique">
-        <input type="hidden" id="id"> <div class="form-group">
-        <label for="date">Date:</label>
-        <input type="date" id="date" required>
-    </div>
-        <div class="form-group">
-            <label for="hEntree">H Entrée:</label>
-            <input type="time" id="hEntree" required>
+    <div id="message"></div>
+    <div class="form-section">
+        <div class="section-header">
+            <h2 id="form-section-title">Ajouter une entrée</h2>
         </div>
-        <div class="form-group">
-            <label for="hSortie">H Sortie:</label>
-            <input type="time" id="hSortie" required>
-        </div>
-        <div class="form-group">
-            <label for="transporteur">Transporteur:</label>
-            <input type="text" id="transporteur" placeholder="Nom du Transporteur" required>
-        </div>
+        <form id="formDsClassique">
+            <input type="hidden" id="id">
+            <div class="form-group">
+                <label for="date">Date:</label>
+                <input type="date" id="date" required>
+            </div>
+            <div class="form-group">
+                <label for="hEntree">H Entrée:</label>
+                <input type="time" id="hEntree" required>
+            </div>
+            <div class="form-group">
+                <label for="hSortie">H Sortie:</label>
+                <input type="time" id="hSortie" required>
+            </div>
 
-        <div class="form-group">
-            <label for="numeroBL">N° BL:</label>
-            <input type="text" id="numeroBL" placeholder="Numéro de Bon de Livraison" required>
-        </div>
-        <div class="form-group">
-            <label for="immatricule">Immatricule:</label>
-            <input type="text" id="immatricule" placeholder="Immatriculation du Véhicule" required>
-        </div>
-        <div class="form-group">
-            <label for="tb">TB:</label>
-            <input type="number" step="0.01" id="tb" placeholder="Poids Brut" required>
-        </div>
-        <div class="form-group">
-            <label for="tare">TARE:</label>
-            <input type="number" step="0.01" id="tare" placeholder="Poids Tare" required>
-        </div>
-        <div class="form-group">
-            <label for="poste">POSTE:</label>
-            <select id="poste">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-            </select>
-        </div>
-        <div class="form-group" style="grid-column: 1 / -1;">
-            <label for="observation">Observation:</label>
-            <textarea id="observation" placeholder="Ajouter des observations supplémentaires..."></textarea>
-        </div>
+            <div class="form-group">
+                <label for="numeroBL">N° BL:</label>
+                <input type="text" id="numeroBL" placeholder="Numéro de Bon de Livraison" required>
+            </div>
+            <div class="form-group">
+                <label for="immatricule">Immatricule:</label>
+                <input type="text" id="immatricule" placeholder="Immatriculation du Véhicule" required>
+            </div>
+            <div class="form-group">
+                <label for="tb">TB:</label>
+                <input type="number" step="0.01" id="tb" placeholder="Poids Brut" required>
+            </div>
+            <div class="form-group">
+                <label for="tare">TARE:</label>
+                <input type="number" step="0.01" id="tare" placeholder="Poids Tare" required>
+            </div>
+            <div class="form-group">
+                <label for="transporteur-select">Transporteur:</label>
+                <select id="transporteur-select"></select>
+            </div>
+            <div class="form-group">
+                <label for="poste-select">Poste:</label>
+                <select id="poste-select"></select>
+            </div>
+            <div class="form-group" style="grid-column: 1 / -1;">
+                <label for="observation">Observation:</label>
+                <textarea id="observation" placeholder="Ajouter des observations supplémentaires..."></textarea>
+            </div>
 
-        <div class="form-buttons">
-            <button type="submit" id="submit-button"><i class="fas fa-plus"></i> Ajouter</button>
-            <button type="button" id="export-excel-button" onclick="exportDsClassiqueExcel()"><i class="fas fa-file-excel"></i> Exporter Excel</button>
-            <button type="button" id="cancel-edit-button" style="display:none;"><i class="fas fa-times"></i> Annuler</button>
-        </div>
-    </form>
-</div>
+            <div class="form-buttons">
+                <button type="submit" id="submit-button"><i class="fas fa-plus"></i> Ajouter</button>
+                <button type="button" id="export-excel-button" onclick="exportExcel()"><i class="fas fa-file-excel"></i> Exporter Excel</button>
+                <button type="button" id="cancel-edit-button" style="display:none;"><i class="fas fa-times"></i> Annuler</button>
+            </div>
+        </form>
+    </div>
 
     <div class="table-section">
         <div class="section-header">
@@ -969,18 +968,72 @@
 </div>
 
 <script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const REF_API_URL = "http://localhost:8080/api/refs";
+
+        // Mapping of field IDs to the keys returned by the backend
+        // Only includes fields present in this specific HTML form.
+        const refMapping = {
+            "transporteur-select": "transporteurs",
+            "poste-select": "postes"
+            // "lieu-dechargement-select": "lieuxDeDechargement", // Not present in this HTML
+            // "lieu-chargement-select": "lieuxDeChargement"     // Not present in this HTML
+        };
+
+        // Fills a single select field with provided values
+        function fillSelect(selectId, values) {
+            const select = document.getElementById(selectId);
+            if (!select) {
+                console.warn(`⚠️ Select element with ID '${selectId}' not found.`);
+                return;
+            }
+            select.innerHTML = ""; // Clear existing options
+            values.forEach(value => {
+                const option = document.createElement("option");
+                option.value = value;
+                option.textContent = value;
+                select.appendChild(option);
+            });
+        }
+
+        // Fetches refs from backend and populates select fields
+        fetch(REF_API_URL)
+            .then(res => {
+                if (!res.ok) {
+                    throw new Error(`HTTP error! status: ${res.status}`);
+                }
+                return res.json();
+            })
+            .then(data => {
+                Object.entries(refMapping).forEach(([selectId, key]) => {
+                    if (data[key] && Array.isArray(data[key])) {
+                        fillSelect(selectId, data[key]);
+                    } else {
+                        console.warn(`⚠️ API response for key '${key}' is missing or not an array. Data:`, data);
+                    }
+                });
+            })
+            .catch(error => {
+                console.error("⚠️ Failed to load shared fields:", error);
+            });
+    });
+</script>
+
+<script>
     const API_BASE_URL = 'http://localhost:8080/api/ds-classique';
     const formDs              = document.getElementById('formDsClassique');
     const idInput             = document.getElementById('id');
     const dateInput           = document.getElementById('date');
     const hEntreeInput        = document.getElementById('hEntree');
     const hSortieInput        = document.getElementById('hSortie');
-    const transporteurInput   = document.getElementById('transporteur');
+    // Updated to reference the actual select elements
+    const transporteurSelect  = document.getElementById('transporteur-select');
     const numeroBLInput       = document.getElementById('numeroBL');
     const immatriculeInput    = document.getElementById('immatricule');
     const tbInput             = document.getElementById('tb');
     const tareInput           = document.getElementById('tare');
-    const posteInput          = document.getElementById('poste');
+    // Updated to reference the actual select element
+    const posteSelect         = document.getElementById('poste-select');
     const observationInput    = document.getElementById('observation');
     const submitButton        = document.getElementById('submit-button');
     const formSectionTitle    = document.getElementById('form-section-title');
@@ -1081,12 +1134,12 @@
             date: dateInput.value,
             hEntree: hEntreeInput.value,
             hSortie: hSortieInput.value,
-            transporteur: transporteurInput.value,
+            transporteur: transporteurSelect.value, // Use .value from select
             numeroBL: numeroBLInput.value,
             immatricule: immatriculeInput.value,
             tb: parseFloat(tbInput.value),
             tare: parseFloat(tareInput.value),
-            poste: posteInput.value,
+            poste: posteSelect.value, // Use .value from select
             observation: observationInput.value
         };
         try {
@@ -1113,12 +1166,12 @@
             dateInput.value = data.date;
             hEntreeInput.value = data.hEntree;
             hSortieInput.value = data.hSortie;
-            transporteurInput.value = data.transporteur;
+            transporteurSelect.value = data.transporteur; // Set value for select
             numeroBLInput.value = data.numeroBL;
             immatriculeInput.value = data.immatricule;
             tbInput.value = data.tb;
             tareInput.value = data.tare;
-            posteInput.value = data.poste;
+            posteSelect.value = data.poste; // Set value for select
             observationInput.value = data.observation;
             submitButton.innerHTML = '<i class="fas fa-save"></i> Mettre à jour';
             formSectionTitle.textContent = 'Modifier l’entrée';
@@ -1158,4 +1211,3 @@
 </script>
 
 </body>
-</html>
